--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@popperjs/core": "^2.11.5",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.2.0-beta1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
